# cookiecutter-sphinx-theme-template

./: .gitignore  LICENSE  README.md  cookiecutter.json  noxfile.py  package-lock.json  pyproject.toml
.github/workflows/: tests.yaml
tests/: test_bake.py
{{ cookiecutter.project_slug }}/: README.md  noxfile.py  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: tests.yaml
{{ cookiecutter.project_slug }}/sample_docs/: conf.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py  package-lock.json  package.json  tailwind.config.js
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/styles/: input.css
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/theme/{{ cookiecutter.project_slug }}/: theme.toml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/theme/{{ cookiecutter.project_slug }}/static/styles/: .gitignore
