[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
readme = "README.md"
dependencies = ["sphinx >= 8.0,<9.0"]
classifiers = [
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[project.entry-points."sphinx.html_themes"]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}"
