[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
readme = "README.md"
dependencies = [
    "sphinx >= 8.0,<9.0",
    {%- if cookiecutter.theme_inherit == "sphinx_null_theme" %}
    "sphinx_null_theme"
    {% endif -%}
]
classifiers = [
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[project.entry-points."sphinx.html_themes"]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}"
